# cloud-renderer-project

./: CMakeLists.txt  README.md
scene/: sphere.json
shaders/: BoundingBoxLines.frag  BoundingBoxSurface.frag  Default.frag  NoLighting.frag  NoLighting.vert  PointCloud.frag  PointCloud.vert  PointLight.frag  PointLight.vert  QuadSurface.frag  QuadSurface.vert  WorleyPoints.frag  WorleyPoints.vert
src/: CMakeLists.txt  clouds-noise-generate.cpp  clouds-object-render.cpp  clouds.cpp  clouds.h  main.cpp
